Menu selection set to the actual selected value on each settings rendering and correcting a z-index artifact.

--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,7 @@ code[class*="language-"], pre[class*="language-"] {
 ::selection {
     background-color: gray;
 }
+
+.token {
+    z-index: 0!important;
+}
